Distribution of dashboard on fragments

--- a/app/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/app/src/main/res/layout/activity_dashboard.xml
@@ -2,202 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    android:id="@+id/dashboard_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/pattern_background"
+    android:orientation="vertical"
+    tools:context=".dashboard"
     tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="1dp"
-    tools:context=".dashboard">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background_inside"
-            android:paddingBottom="16dp"
-            tools:context=".dashboard">
-
-            <TextView
-                android:id="@+id/txt_saludo"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:text="Hola, usuario"
-                android:textColor="@color/textPrimary"
-                android:textSize="@dimen/subtitle"
-                app:autoSizeTextType="uniform"
-                app:layout_constraintBottom_toBottomOf="@+id/img_user_photo"
-                app:layout_constraintHeight_percent="0.06"
-                app:layout_constraintStart_toEndOf="@+id/img_user_photo"
-                app:layout_constraintTop_toTopOf="@+id/img_user_photo"
-                app:layout_constraintWidth_percent="0.32" />
-
-            <ImageView
-                android:id="@+id/img_user_photo"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:contentDescription="@string/user_photo"
-                app:layout_constraintHeight_percent="0.1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.2"
-                app:srcCompat="@drawable/user" />
-
-            <Button
-                android:id="@+id/btn_menu"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="#00FFFFFF"
-                android:foreground="@android:drawable/ic_menu_sort_by_size"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.08"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.13" />
-
-            <TextView
-                android:id="@+id/txt_balance"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:fontFamily="sans-serif"
-                android:text="@string/balance"
-                android:textColor="@color/textPrimary"
-                app:autoSizeTextType="uniform"
-                app:layout_constraintHeight_percent="0.1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_user_photo"
-                app:layout_constraintWidth_percent="0.5" />
-
-            <SeekBar
-                android:id="@+id/bar_prog_moto"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="60dp"
-                android:background="#0D272525"
-                android:progress="30"
-                android:progressBackgroundTint="#000000"
-                android:progressTint="@color/loanppi"
-                android:thumb="@drawable/moto1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.09"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_balance"
-                app:layout_constraintWidth_percent="0.8"
-                app:tickMarkTint="#000000" />
-
-            <TextView
-                android:id="@+id/txt_meta"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginBottom="8dp"
-                android:text="Meta"
-                android:textAlignment="viewEnd"
-                android:textColor="@color/textPrimary"
-                app:autoSizeTextType="uniform"
-                app:layout_constraintBottom_toTopOf="@+id/val_meta"
-                app:layout_constraintEnd_toEndOf="@+id/val_meta"
-                app:layout_constraintHeight_percent="0.04"
-                app:layout_constraintWidth_percent="0.25" />
-
-            <TextView
-                android:id="@+id/val_meta"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:text="1'050.000"
-                android:textAlignment="viewEnd"
-                android:textColor="@color/textPrimary"
-                app:autoSizeTextType="uniform"
-                app:layout_constraintBottom_toTopOf="@+id/bar_prog_moto"
-                app:layout_constraintEnd_toEndOf="@+id/bar_prog_moto"
-                app:layout_constraintHeight_percent="0.03"
-                app:layout_constraintWidth_percent="0.2" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cons_bar"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintEnd_toEndOf="@+id/bar_prog_moto"
-                app:layout_constraintHeight_percent="0.03"
-                app:layout_constraintStart_toStartOf="@+id/bar_prog_moto"
-                app:layout_constraintTop_toBottomOf="@+id/bar_prog_moto"
-                app:layout_constraintWidth_percent="0.8">
-
-                <TextView
-                    android:id="@+id/bar_prog_value"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:text="315.000"
-                    android:textAlignment="center"
-                    android:textColor="@color/textPrimary"
-                    app:autoSizeTextType="uniform"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="1"
-                    app:layout_constraintHorizontal_bias="0.45"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.2" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <Button
-                android:id="@+id/btn_1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="60dp"
-                android:background="@drawable/btn_dashboard"
-                android:text="Button"
-                android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toStartOf="@+id/btn_2"
-                app:layout_constraintHeight_percent="0.15"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cons_bar"
-                app:layout_constraintWidth_percent="0.4" />
-
-            <Button
-                android:id="@+id/btn_2"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="60dp"
-                android:background="@drawable/btn_dashboard"
-                android:text="@string/btn2"
-                android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.15"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btn_1"
-                app:layout_constraintTop_toBottomOf="@+id/cons_bar"
-                app:layout_constraintWidth_percent="0.4" />
-
-            <Button
-                android:id="@+id/btn_3"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/btn_dashboard"
-                android:enabled="false"
-                android:text="@string/btn3"
-                android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toEndOf="@+id/btn_2"
-                app:layout_constraintHeight_percent="0.15"
-                app:layout_constraintStart_toStartOf="@+id/btn_1"
-                app:layout_constraintTop_toBottomOf="@+id/btn_1"
-                app:layout_constraintWidth_percent="0.4" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</LinearLayout>
+    tools:layout_editor_absoluteY="1dp"/>
