--- a/app/app/src/main/res/layout/fragment_main_worker.xml
+++ b/app/app/src/main/res/layout/fragment_main_worker.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main">
+    tools:context=".main_worker">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:text="Hola, usuario"
+                android:text="Hola, Santiago"
                 android:textColor="@color/textPrimary"
                 android:textSize="@dimen/subtitle"
                 app:autoSizeTextType="uniform"
@@ -97,7 +97,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginBottom="8dp"
-                android:text="Meta"
+                android:text="@string/txt_goal"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
@@ -110,7 +110,7 @@
                 android:id="@+id/val_meta"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:text="1'050.000"
+                android:text="830.000"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
@@ -134,28 +134,28 @@
                     android:id="@+id/bar_prog_value"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:text="315.000"
+                    android:text="249.000"
                     android:textAlignment="center"
                     android:textColor="@color/textPrimary"
                     app:autoSizeTextType="uniform"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="1"
-                    app:layout_constraintHorizontal_bias="0.45"
+                    app:layout_constraintHorizontal_bias="0.31"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintWidth_percent="0.2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
-                android:id="@+id/btn_1"
+                android:id="@+id/btn_lend"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="60dp"
                 android:background="@drawable/btn_dashboard"
-                android:text="Button"
+                android:text="@string/lend"
                 android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toStartOf="@+id/btn_2"
+                app:layout_constraintEnd_toStartOf="@+id/btn_my_loan"
                 app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,33 +163,33 @@
                 app:layout_constraintWidth_percent="0.4" />
 
             <Button
-                android:id="@+id/btn_2"
+                android:id="@+id/btn_my_loan"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="60dp"
                 android:background="@drawable/btn_dashboard"
-                android:text="@string/btn2"
+                android:text="@string/my_loan"
                 android:textColor="@color/textPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btn_1"
+                app:layout_constraintStart_toEndOf="@+id/btn_lend"
                 app:layout_constraintTop_toBottomOf="@+id/cons_bar"
                 app:layout_constraintWidth_percent="0.4" />
 
             <Button
-                android:id="@+id/btn_3"
-                android:layout_width="0dp"
+                android:id="@+id/btn_history"
+                android:layout_width="165dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/btn_dashboard"
                 android:enabled="false"
-                android:text="@string/btn3"
+                android:text="@string/history"
                 android:textColor="@color/textPrimary"
-                app:layout_constraintEnd_toEndOf="@+id/btn_2"
+                app:layout_constraintEnd_toEndOf="@+id/btn_my_loan"
                 app:layout_constraintHeight_percent="0.15"
-                app:layout_constraintStart_toStartOf="@+id/btn_1"
-                app:layout_constraintTop_toBottomOf="@+id/btn_1"
+                app:layout_constraintStart_toStartOf="@+id/btn_lend"
+                app:layout_constraintTop_toBottomOf="@+id/btn_lend"
                 app:layout_constraintWidth_percent="0.4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
