--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -38,7 +38,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif"
-                android:text="Perfil"
+                android:text="@string/profile"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintHeight_percent="0.06"
@@ -52,7 +52,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Información personal"
+                android:text="@string/personal_info"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintHeight_percent="0.03"
@@ -66,7 +66,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Primer nombre"
+                android:hint="@string/first_name"
                 android:inputType="textPersonName"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_second_name"
@@ -82,7 +82,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Segundo nombre"
+                android:hint="@string/second_name"
                 android:inputType="textPersonName"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Primer apellido"
+                android:hint="@string/first_last_name"
                 android:inputType="textPersonName"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_second_last_name"
@@ -113,7 +113,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Segundo apellido"
+                android:hint="@string/second_last_name"
                 android:inputType="textPersonName"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
-                android:entries="@android:array/emailAddressTypes"
+                android:entries="@array/documents_type"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_cedula"
                 app:layout_constraintHeight_percent="0.06"
@@ -141,7 +141,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Documento"
+                android:hint="@string/document_number"
                 android:inputType="textPersonName"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -170,7 +170,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Número celular"
+                android:hint="@string/phone_number"
                 android:inputType="phone"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_email_adress"
@@ -185,7 +185,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Correo electrónico"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -200,7 +200,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="Dirección"
+                android:hint="@string/home_address"
                 android:inputType="textPostalAddress"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="@+id/edit_email_adress"
@@ -215,7 +215,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/btn_background_white"
-                android:text="Guardar"
+                android:text="@string/save"
                 android:textColor="@color/textPrimary"
                 android:textSize="@dimen/btn_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
